--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 
+## PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:15432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=Postgres2019!
+
+#drop n create table again, good for testing, comment this in production
+spring.jpa.hibernate.ddl-auto=update
+
